			   XPCE ChangeLog
			   ==============

* FIXED: Produce clean error message when running a class whose super-class
  is missing.

* FIXED: PceEmacs SGML mode: avoid long delay on long lists of elements
  in very large files.

* FIXED: Popup handling with library(pce_unclip).

VERSION 6.2.6, distributed with SWI-Prolog 5.2.6
================================================

* ADDED: Paint <-mark of class path when generating PostScript.

* ENHANCED: barchart package: show cursor indicating a bar can be dragged.

VERSION 6.2.5, distributed with SWI-Prolog 5.2.5
================================================

* FIXED: `process->close' to avoid messages
  Warning: Select failed; error code 9.

* FIXED: Manual tools object browser doesn't open class browser on request.
  Fabien Todescato.

* ADDED: `object <-create_context' to query the goal stack for the object
  that creates me.

VERSION 6.2.4, distributed with SWI-Prolog 5.2.4
================================================

* ENHANCED: pce_global messages and handling of changed definitions.

* ADDED: Support for new SWI-Prolog profiler hooks.

* FIXED: Issues resulting from the :: priority change.  Anders Bouwer.


VERSION 6.2.3, distributed with SWI-Prolog 5.2.3
================================================

* ADDED: library(pce_unclip) to show graphicals partly clipped by their own
  window in a small tooltip-like window.  Used by library(pce_toc).

* MODIFIED: Changed priority of :: using in "comment"::<Body> from 1150 xfx
  to 910 xfy.  Must be above \+ (900) to avoid a conflict.

* FIXED: Visual hierarchy tool to find windows displayed in windows.

* ENHANCED: reset the display after an abort.

* FIXED/ENHANCED: Various issues and expensions with PceEmacs bookmark
  window.

* FIXED: MS-Windows: painting (redraw) in windows displayed inside a
  `tabbed_window'.

* ADDED: `menu_item->background'.

* PORT: Define _THREAD_SAFE for FreeBSD if threaded code is requested.
